--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-i
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Utilisation de git test</title>
+</head>
+<body style="background: green; ">
+    <h1>Utilisation de git test</h1>
+</body>
+</html>
